--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,14 @@
     <!-- This permission is necessary in order for Sunshine to perform network access. -->
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- Permissions required by the sync adapter -->
+    <!--<uses-permission-->
+        <!--android:name="android.permission.READ_SYNC_SETTINGS"/>-->
+    <!--<uses-permission-->
+        <!--android:name="android.permission.WRITE_SYNC_SETTINGS"/>-->
+    <!--<uses-permission-->
+        <!--android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>-->
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -35,6 +43,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.android.sunshine.app.MainActivity" />
         </activity>
+
     </application>
 
 </manifest>
